fix: :bug: Fixing workflow
fixing dev & main workflow & small change in CmakeLists.txt

--- a/.github/workflows/dev.workflow.yml
+++ b/.github/workflows/dev.workflow.yml
@@ -15,3 +15,5 @@ jobs:
 
       - name: clang-tidy-action
         uses: asarium/clang-tidy-action@v1.0
+        with:
+          fixesFile: fixes.yaml 
