--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,16 @@ set(discord_self_nuker_INCLUDE_DIRS "")
 include_directories(${discord_self_nuker_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/src)
 add_executable(${PROJECT_NAME} ${discord_self_nuker_SOURCES})
 
+find_program(CLANG_TIDY "clang-tidy")
+
+if(CLANG_TIDY)
+  set(CMAKE_CXX_CLANG_TIDY
+    "${CLANG_TIDY}"
+    "-checks=*"
+    "-fix"
+  )
+endif()
+
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-allow-multiple-definition")
 
 foreach(_headerFile ${discord_self_nuker_HEADERS})
