--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
         run: |
             mkdir build
             cd build
-            cmake ..
-            cmake --build . --target clang-tidy
+            cmake ../
+            cmake --build .
