--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: clang-format Check (with custom .clang-format file)
         uses: mrousavy/clang-format-action@v1
 
@@ -27,5 +30,5 @@ jobs:
         run: |
             mkdir build
             cd build
-            cmake ../
+            cmake ../../../
             cmake --build .
