--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,19 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Verify .clang-format
-        run: ls -la .clang-format
-
-      - name: clang-format Check
+      - name: clang-format Check (with custom .clang-format file)
         uses: mrousavy/clang-format-action@v1
 
       - name: clang-tidy-action
         uses: asarium/clang-tidy-action@v1.0
         with:
-          fixesFile: fixes.yaml
+          fixesFile: fixes.yaml 
 
   build:
     needs: clang
