--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout Project
+      uses: actions/checkout@v4.2.1
+      
     - name: Build Project
       uses: threeal/cmake-action@v2.0.0
       with:
